--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 }
 h1{color: rgb(128, 138, 152); text-transform: capitalize; text-align: center;}
 .vz_container {
-    width: 70%;
+    width: 60%;
     min-height: 200px;
     margin: 0 auto;
     background-color: white;
@@ -14,3 +14,17 @@ h1{color: rgb(128, 138, 152); text-transform: capitalize; text-align: center;}
     border-radius: 10px;
     margin-top: 35px;
 }
+.vz_container span {
+    font-size: 30px;
+    color: rgb(128, 138, 152);
+}
+.back-btn {
+    background-color: rgb(195, 239, 252);
+    width: 250px;
+    height: 50px;
+    margin: 0 auto;
+    line-height: 25px;
+    padding: 10px;
+    border-radius: 10px;
+}
+.back-btn a{text-decoration: none; color:rgb(0, 22, 50); font-weight: bold;}
